Fixed overlaping menu text and locales on phone.

--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -18,7 +18,7 @@ header {
   ul {
     position: absolute;
     right: 100px;
-    top: 18px;
+    top: 30px;
     list-style: none;
     margin: 0;
     li {
